--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel='stylesheet' href='d3.slider.css'>
 </head>
 <body>
+
+<div id="slider11"></div>
 <script type='text/javascript' src='script.js'></script>
+
 </body>
 </html>
