Media voti user + raggruppamento per voti e calcolo popolazione

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 
 <div id="slider11"></div>
+<script type='text/javascript' src='parser.js'></script>
 <script type='text/javascript' src='script.js'></script>
+
+
 
 </body>
 </html>
