Separato parser dallo script svg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <div id="slider11"></div>
 <script type='text/javascript' src='script.js'></script>
+<script type='text/javascript' src='parser.js'></script>
 
 
 
