--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <html>
 <head>
     <title>D3 Page Template</title>
-    <script type="text/javascript" src="d3.v3.js"></script>
+    <script type="text/javascript" src="d3.v5.js"></script>
+
+    <script src="d3RangeSlider.js"></script>
+    <link href="d3RangeSlider.css" rel="stylesheet">
 
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
 
-<div id="slider"></div>
-<script type='text/javascript' src='script.js'></script>
+<div id="slider-container"></div>
+
 <script type='text/javascript' src='parser.js'></script>
+<script type='text/javascript' src='script2.js'></script>
 
 
 
