Aggiunto slider basato sulle date

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link href="d3RangeSlider.css" rel="stylesheet">
 
     <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='sliderStyle.css'>
 </head>
 <body>
 
-<div id="slider-container"></div>
+<div id="container">
+    <div id="slider-container"></div>
+    <div id="range-label">0 - 10</div>
+</div>
 
 <script type='text/javascript' src='parser.js'></script>
 <script type='text/javascript' src='script2.js'></script>
-
 
 
 </body>
