Concluso aggiornamento del DOM in base al range di date

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <script type='text/javascript' src='parser.js'></script>
-<script type='text/javascript' src='script2.js'></script>
+<script type='text/javascript' src='script.js'></script>
 
 
 </body>
