--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 </head>
 <body>
 
-<div id="container">
-    <div id="slider-container"></div>
-    <div id="range-label">0 - 10</div>
-</div>
 
 <script type='text/javascript' src='parser.js'></script>
 <script type='text/javascript' src='script.js'></script>
 
+<div id="graphic">
+
+</div>
+
+<div id="container">
+    <div id="slider-container"></div>
+    <div id="range-label">0 - 10</div>
+</div>
 
 </body>
 </html>
