Sistemazione date estremi slider

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <div id="container">
     <div id="slider-container"></div>
-    <div id="range-label">0 - 10</div>
+    <!--<div id="startdate"></div>
+    <div id="range-label">0 - 10</div>-->
 </div>
 
 </body>
