--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 
 <div id="container">
     <div id="slider-container"></div>
-    <!--<div id="startdate"></div>
-    <div id="range-label">0 - 10</div>-->
+</div>
+
+<div id="button-container">
+    <button id="last-month">Ultimo mese</button>
+    <button id="last-week">Ultima settimana</button>
+    <button id="last-login">Ultimo login</button>
 </div>
 
 </body>
