Modificati i bottoni in radio buttons

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 </div>
 
 <div id="button-container">
-    <button id="last-month">Ultimo mese</button>
-    <button id="last-week">Ultima settimana</button>
-    <button id="last-login">Ultimo login</button>
+    <input type="radio" name="timeRange" id="last-month" value="last-mont">
+    <label for="last-month" class="radioTimeRange">Ultimo mese</label>
+    <input type="radio" name="timeRange" id="last-week" value="last-week">
+    <label for="last-week" class="radioTimeRange">Ultima settimana</label>
+    <input type="radio" name="timeRange" id="last-login" value="last-login">
+    <label for="last-login" class="radioTimeRange">Ultimo login</label>
 </div>
 
 </body>
