Completata programmazione bottoni date (manca ultimo login)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <label for="last-week" class="radioTimeRange">Ultima settimana</label>
     <input type="radio" name="timeRange" id="last-login" value="last-login">
     <label for="last-login" class="radioTimeRange">Ultimo login</label>
+    <input type="radio" name="timeRange" id="reset" value="reset">
+    <label for="reset" class="radioTimeRange">Reset</label>
 </div>
 
 </body>
