--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
 <head>
-    <title>D3 Page Template</title>
+    <title>Main page</title>
     <script type="text/javascript" src="d3.v5.js"></script>
 
     <script src="d3RangeSlider.js"></script>
