--- a/training.html
+++ b/training.html
@@ -4,43 +4,57 @@
     <meta charset="UTF-8">
     <title>Training</title>
     <script type="text/javascript" src="d3.v5.js"></script>
+
+    <link rel='stylesheet' href='training_style.css'>
 </head>
 <body>
+
 <div id="container">
     <div id="top-bar">
         <div id="athlete-info">
             <h1>Atleta</h1>
             <img src="profile-pic.png" alt="profile-pic">
-            <p id="name">Mario Rossi</p>
-            <p id="age">27 anni</p>
-            <p>Livello (?)</p>
-            <button id="send-msg">Invia messaggio</button>
+            <div id="athlete-profile-info">
+                <p id="name">Mario Rossi</p>
+                <p id="age">27 anni</p>
+                <p>Livello (?)</p>
+            </div>
+            <div id="athlete-buttons">
+                <button id="send-msg">Invia messaggio</button>
+            </div>
         </div>
-        <div id="score">
-            <h1>Allenamento 5 Ottobre 2018</h1>
-            <div id="score-slider"></div>
-            <div id="predicted">4</div>
-            <div id="user-given">N/A</div>
+        <div id ="athlete-training">
+            <div id="score">
+                <h1>Allenamento 5 Ottobre 2018</h1>
+                <div id="score-slider"></div>
+                <div id="predicted">4</div>
+                <div id="user-given">N/A</div>
+            </div>
+
+            <div id="training-info">
+                <p id="duration">Durata: 30min 27s</p>
+                <p id="rest-time">Riposo: 3s</p>
+                <p id="calories">Calorie: 400 Kcal</p>
+            </div>
         </div>
-        <div id="training-info">
-            <p id="duration">30min 27s</p>
-            <p id="rest-time">3s</p>
-            <p id="calories">400 Kcal</p>
-        </div>
+        <div id="clear"></div>
+
     </div>
+
+
     <div id="bottom-bar">
         <div id="training-charts">
             <div id="speed-container">
                 <h1>Velocità</h1>
-                <svg id="speed-chart"></svg>
+                <div id="speed-chart"></div>
             </div>
             <div id="bpm-container">
                 <h1>B.P.M.</h1>
-                <svg id="bpm-chart"></svg>
+                <div id="bpm-chart"></div>
             </div>
             <div id="height-container">
                 <h1>Altezza</h1>
-                <svg id="height-chart"></svg>
+                <div id="height-chart"></div>
             </div>
         </div>
     </div>
