Aggiunto css base #2

--- a/training.html
+++ b/training.html
@@ -13,7 +13,7 @@
     <div id="top-bar">
         <div id="athlete-info">
             <h1>Atleta</h1>
-            <img src="profile-pic.png" alt="profile-pic">
+            <img src="img/profile-pic.png" alt="profile-pic">
             <div id="athlete-profile-info">
                 <p id="name">Mario Rossi</p>
                 <p id="age">27 anni</p>
@@ -26,9 +26,14 @@
         <div id ="athlete-training">
             <div id="score">
                 <h1>Allenamento 5 Ottobre 2018</h1>
-                <div id="score-slider"></div>
-                <div id="predicted">4</div>
-                <div id="user-given">N/A</div>
+                <div id="score-slider">Slider</div>
+
+                <div id="athlete-marks">
+                    <img id ="predicted-img" src="img/ai.png" alt="machine-mark">
+                    <div id="predicted">4</div>
+                    <img id ="user-given-img" src="img/user.png" alt="user-mark">
+                    <div id="user-given">N/A</div>
+                </div>
             </div>
 
             <div id="training-info">
