Aggiunti assi dei grafici

--- a/training.html
+++ b/training.html
@@ -51,15 +51,15 @@
         <div id="training-charts">
             <div id="speed-container">
                 <h1>Velocità</h1>
-                <div id="speed-chart"></div>
+                <svg class= "chart" id="speed-chart"></svg>
             </div>
             <div id="bpm-container">
                 <h1>B.P.M.</h1>
-                <div id="bpm-chart"></div>
+                <svg class= "chart" id="bpm-chart"></svg>
             </div>
-            <div id="height-container">
+            <div id="altitude-container">
                 <h1>Altezza</h1>
-                <div id="height-chart"></div>
+                <svg class= "chart" id="altitude-chart"></svg>
             </div>
         </div>
     </div>
