--- a/training.html
+++ b/training.html
@@ -13,14 +13,18 @@
     <div id="top-bar">
         <div id="athlete-info">
             <h1>Atleta</h1>
-            <img src="img/profile-pic.png" alt="profile-pic">
-            <div id="athlete-profile-info">
-                <p id="name">Mario Rossi</p>
-                <p id="age">27 anni</p>
-                <p>Livello (?)</p>
-            </div>
-            <div id="athlete-buttons">
-                <button id="send-msg">Invia messaggio</button>
+            <div class="athlete-info-class">
+                <div id="athlete-img-actions">
+                    <img src="img/profile-pic.png" alt="profile-pic">
+                    <div id="athlete-buttons">
+                        <button id="send-msg">Invia messaggio</button>
+                    </div>
+                </div>
+                <div id="athlete-profile-info">
+                    <p id="name">Mario Rossi</p>
+                    <p id="age">27 anni</p>
+                    <p>Livello (?)</p>
+                </div>
             </div>
         </div>
         <div id ="athlete-training">
@@ -51,15 +55,15 @@
         <div id="training-charts">
             <div id="speed-container">
                 <h1>Velocità</h1>
-                <svg class= "chart" id="speed-chart"></svg>
+                <svg class="chart" id="speed-chart"></svg>
             </div>
             <div id="bpm-container">
                 <h1>B.P.M.</h1>
-                <svg class= "chart" id="bpm-chart"></svg>
+                <svg class="chart" id="bpm-chart"></svg>
             </div>
             <div id="altitude-container">
                 <h1>Altezza</h1>
-                <svg class= "chart" id="altitude-chart"></svg>
+                <svg class="chart" id="altitude-chart"></svg>
             </div>
         </div>
     </div>
