--- a/training.html
+++ b/training.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Training</title>
     <script type="text/javascript" src="d3.v5.js"></script>
+    <script src="https://unpkg.com/d3-simple-slider"></script>
 
     <link rel='stylesheet' href='training_style.css'>
 </head>
@@ -30,7 +31,7 @@
         <div id ="athlete-training">
             <div id="score">
                 <h1>Allenamento 5 Ottobre 2018</h1>
-                <div id="score-slider">Slider</div>
+                <div id="score-slider"></div>
 
                 <div id="athlete-marks">
                     <img id ="predicted-img" src="img/ai.png" alt="machine-mark">
