Aggiunta navbar a scomparsa nella pagina principale

--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
     <label for="reset" class="radioTimeRange">Reset</label>
 </div>
 
+<div id="user-list" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+</div>
+
 </body>
 </html>
