Costruzione lista utenti

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <div id="user-list" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div> search bar </div>
 </div>
 
 </body>
