--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
 <div id="user-list" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <div> search bar </div>
+    <div id="search-bar-container">
+        <input type="text" id="myInput" onkeyup="searchUser()" placeholder="Search for names.." title="Type in a name">
+    </div>
 </div>
 
 </body>
