--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </div>
 
 <div id="container">
-    <div id="slider-container"></div>
+    <div id="slider-container" class="active-element"></div>
 </div>
 
-<div id="button-container">
+<div id="button-container" class="active-element">
     <input type="radio" name="timeRange" id="last-month" value="last-mont">
     <label for="last-month" class="radioTimeRange">Ultimo mese</label>
     <input type="radio" name="timeRange" id="last-week" value="last-week">
@@ -36,10 +36,11 @@
     <label for="reset" class="radioTimeRange">Reset</label>
 </div>
 
-<div id="user-list" class="sidenav">
+<div id="user-list" class="sidenav active-element">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <p id="summary"></p>
     <div id="search-bar-container">
-        <input type="text" id="myInput" onkeyup="searchUser()" placeholder="Search for names.." title="Type in a name">
+        <input type="text" id="myInput" onkeyup="searchUser()" placeholder="Ricerca un atleta" title="Scrivi un nome">
     </div>
 </div>
 
