Aggiunta libreria Papa Parse e corretti alcuni typos

--- a/training.html
+++ b/training.html
@@ -5,6 +5,7 @@
     <title>Training</title>
     <script type="text/javascript" src="d3.v5.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
+    <script src="papaparse.js"></script>
 
     <link rel='stylesheet' href='training_style.css'>
 </head>
