Aggiunto parsing dei dati del singolo allenamento

--- a/training.html
+++ b/training.html
@@ -54,7 +54,7 @@
 
 
     <div id="bottom-bar">
-        <div id="training-charts">
+        <!--<div id="training-charts">
             <div id="speed-container">
                 <h1>Velocità</h1>
                 <svg class="chart" id="speed-chart"></svg>
@@ -67,7 +67,7 @@
                 <h1>Altezza</h1>
                 <svg class="chart" id="altitude-chart"></svg>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 
