--- a/training.html
+++ b/training.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.3/css/bootstrap-slider.min.css">
 
     <link rel='stylesheet' href='training_style.css'>
+    <script src="papaparse.js"></script>
+    <script src="d3.v5.js"></script>
     <script src="trainingScript.js"></script>
 
 </head>
