Aggiunti grafici di dimensione fissa scalabili

--- a/training.html
+++ b/training.html
@@ -110,11 +110,15 @@
     </div>
 
     <div class="col">
-        <div id="graphic-container" class="graphic">
+        <div class="graphic">
             <hr class="divider-line">
             <div class="profile-user-name">
                 <h5>Grafico allenamento</h5>
             </div>
+        </div>
+
+        <div id="graphic-container">
+
         </div>
     </div>
 </div>
