Revert "Aggiunti grafici di dimensione fissa scalabili"
This reverts commit 8c40da8285e78f8a87ac7d622b768b58fda0b2ae.

--- a/training.html
+++ b/training.html
@@ -110,15 +110,11 @@
     </div>
 
     <div class="col">
-        <div class="graphic">
+        <div id="graphic-container" class="graphic">
             <hr class="divider-line">
             <div class="profile-user-name">
                 <h5>Grafico allenamento</h5>
             </div>
-        </div>
-
-        <div id="graphic-container">
-
         </div>
     </div>
 </div>
