--- a/training.html
+++ b/training.html
@@ -16,6 +16,7 @@
 
     <link rel='stylesheet' href='training_style.css'>
     <script src="papaparse.js"></script>
+    <script src="svg-pan-zoom.js"></script>
     <script src="d3.v5.js"></script>
 
 </head>
