Adattato il css pagina training

--- a/training.html
+++ b/training.html
@@ -67,7 +67,7 @@
                             <div class="slider-img-human"><img src="img/human.PNG" alt=""/></div>
                         </div>
                         <div class="col-sm-3 make-divs-inline">
-                            <p id="robot-mark">?</p>
+                            <p id="robot-mark">N/A</p>
                         </div>
                     </div>
                 </div>
