--- a/training.html
+++ b/training.html
@@ -64,7 +64,7 @@
                             <p id="predicted">4</p>
                         </div>
                         <div class="col-sm-2 make-divs-inline">
-                            <div class="slider-img-human"><img src="img/human.PNG" alt=""/></div>
+                            <div class="slider-img-human"><img src="img/user.png" alt=""/></div>
                         </div>
                         <div class="col-sm-3 make-divs-inline">
                             <p id="robot-mark">N/A</p>
