Aggiunto triangolo e gestita la grandezza dei grafici della pagina principale

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="slider-container" class="active-element"></div>
     </div>
 
-    <div id="button-container" class="row active-element float-left">
+    <div id="button-container" class="row active-element">
 
         <div class="col-sm make-divs-inline">
         <input type="radio" name="timeRange" id="last-month" value="last-mont">
@@ -57,27 +57,6 @@
 
     </div>
 </div>
-
-
-<!--
-<div id="graphic">
-
-</div>
-
-<div id="container">
-    <div id="slider-container" class="active-element"></div>
-</div>
-
-<div id="button-container" class="active-element">
-    <input type="radio" name="timeRange" id="last-month" value="last-mont">
-    <label for="last-month" class="radioTimeRange">Ultimo mese</label>
-    <input type="radio" name="timeRange" id="last-week" value="last-week">
-    <label for="last-week" class="radioTimeRange">Ultima settimana</label>
-    <input type="radio" name="timeRange" id="last-login" value="last-login">
-    <label for="last-login" class="radioTimeRange">Ultimo login</label>
-    <input type="radio" name="timeRange" id="reset" value="reset">
-    <label for="reset" class="radioTimeRange">Reset</label>
-</div>-->
 
 <div id="user-list" class="sidenav active-element">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
