Inizio parsing dataset cardio_item

--- a/training.html
+++ b/training.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <div class="profile-user-name"><h5>Mario Rossi</h5></div>
+                <div class="profile-user-name"><h5>Isidoro Conti</h5></div>
                 <div class="profile-img">
                     <img src="img/profile-pic.png" alt=""/>
                 </div>
@@ -83,11 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6"><span>Livello</span></div>
-                        <div class="col-md-6"><a>-</a></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6"><span>Professione</span></div>
-                        <div class="col-md-6"><a>-</a></div>
+                        <div class="col-md-6"><a>Principiante</a></div>
                     </div>
                 </div>
             </div>
@@ -115,7 +111,7 @@
         <div class="graphic">
             <hr class="divider-line">
             <div class="profile-user-name">
-                <h5>Grafico allenamento</h5>
+                <h5>Grafici allenamento</h5>
             </div>
         </div>
         <div id="graphic-container"></div>
