Aggiunto filtro di kalman per il passo

--- a/training.html
+++ b/training.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.3/css/bootstrap-slider.min.css">
 
     <link rel='stylesheet' href='training_style.css'>
+    <script src="kalman.js"></script>
     <script src="papaparse.js"></script>
     <script src="svg-pan-zoom.js"></script>
     <script src="d3.v5.js"></script>
