--- a/training.html
+++ b/training.html
@@ -19,6 +19,7 @@
     <script src="kalman.js"></script>
     <script src="papaparse.js"></script>
     <script src="svg-pan-zoom.js"></script>
+    <script src="simplify.js"></script>
     <script src="d3.v5.js"></script>
 
 </head>
